hphp/test/zend/good/Zend/tests/constants_008.php
<?php

define('a', 2);
const a = 1;


if (defined('a')) {
	print a;
}

?>