hphp/test/zend/bad/zend/halt_compiler3.php
<?php
define ('__COMPILER_HALT_OFFSET__', 1);
?>
==DONE==